--- a/vozForums Universal/App.xaml
+++ b/vozForums Universal/App.xaml
@@ -1,15 +1,14 @@
-﻿<Application
+﻿<paging:MtApplication
     x:Class="vozForums_Universal.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:vozForums_Universal"
-    >
+    xmlns:paging="using:MyToolkit.Paging">
     <Application.Resources>
         <SolidColorBrush x:Key="Background" Color="#F5F5FF" />
         <SolidColorBrush x:Key="TextTitleColor" Color="#23497C"/>
         <SolidColorBrush x:Key="TextColor" Color="Black" />
         <SolidColorBrush x:Key="HomeIconColor" Color="Black" />
-
 
         <Style TargetType="TextBlock" x:Name="logo">
             <Setter Property="FontSize" Value="35" />
@@ -28,40 +27,9 @@
             <Setter Property="Background" Value="#E1E4F2" />
         </Style>
         <Style TargetType="TextBlock" x:Name="HomeIcon">
-            <Setter Property="FontSize" Value="35" />
+            <Setter Property="FontSize" Value="20" />
             <Setter Property="Foreground" Value="Green" />
             <Setter Property="Margin" Value="0,10,10,10" />
-            <Setter Property="FontFamily" Value="Segoe MDL2 Assets" />
-        </Style>
-        <Style TargetType="TextBlock" x:Name="HomeText">
-            <Setter Property="FontSize" Value="16" />
-            <Setter Property="Foreground" Value="#23497C" /> <!--Value="#23497C"-->
-            <Setter Property="Margin" Value="0,10,10,10" />
-        </Style>
-
-
-
-
-        <!--<Style TargetType="TextBlock" x:Name="logo">
-            <Setter Property="FontSize" Value="35" />
-            <Setter Property="Foreground" Value="Black" />
-        </Style>
-        <Style TargetType="Grid" x:Name="grHome">
-            <Setter Property="Background" Value="#FF2C2929"/>
-        </Style>
-        <Style TargetType="Frame" x:Name="bgHome">
-            <Setter Property="Background" Value="#FF2C2929"/>
-        </Style>
-        <Style TargetType="RelativePanel" x:Name="rlHome">
-            <Setter Property="Background" Value="#E1E4F2" />
-        </Style>
-        <Style TargetType="ListBox" x:Name="lbHome">
-            <Setter Property="Background" Value="#E1E4F2" />
-        </Style>
-        <Style TargetType="TextBlock" x:Name="HomeIcon">
-            <Setter Property="FontSize" Value="35" />
-            <Setter Property="Foreground" Value="Green" />
-            <Setter Property="Margin" Value="10,10,10,10" />
             <Setter Property="FontFamily" Value="Segoe MDL2 Assets" />
         </Style>
         <Style TargetType="TextBlock" x:Name="HomeText">
@@ -69,9 +37,61 @@
             <Setter Property="Foreground" Value="#23497C" />
             <Setter Property="Margin" Value="0,10,10,10" />
         </Style>
-        <Style TargetType="ListView" x:Name="lv_content">
-            <Setter Property="Background" Value="#FF2C2929"/>
-        </Style>-->
+        <SolidColorBrush x:Key="FlyoutBackgroundThemeBrush" Color="#FF000000"/>
+        <SolidColorBrush x:Key="FlyoutBorderThemeBrush" Color="#FFFFFFFF"/>
 
+        <x:Double x:Key="FlyoutThemeMaxHeight">NaN</x:Double>
+        <!-- Change to NaN -->
+        <x:Double x:Key="FlyoutThemeMaxWidth">NaN</x:Double>
+        <!-- Change to NaN -->
+        <x:Double x:Key="FlyoutThemeMinHeight">54</x:Double>
+        <x:Double x:Key="FlyoutThemeMinWidth">70</x:Double>
+        <Thickness x:Key="FlyoutBorderThemeThickness">2</Thickness>
+        <Thickness x:Key="FlyoutContentThemePadding">0</Thickness>
+        <!-- Change to 0 -->
+
+        <Style x:Key="FlyoutStyle" TargetType="FlyoutPresenter">
+            <Setter Property="RequestedTheme" Value="Light" />
+            <Setter Property="HorizontalContentAlignment" Value="Stretch"/>
+            <Setter Property="VerticalContentAlignment" Value="Stretch"/>
+            <Setter Property="IsTabStop" Value="False"/>
+            <Setter Property="Background" Value="{ThemeResource FlyoutBackgroundThemeBrush}"/>
+            <Setter Property="BorderBrush" Value="{ThemeResource FlyoutBorderThemeBrush}"/>
+            <Setter Property="BorderThickness" Value="{ThemeResource FlyoutBorderThemeThickness}"/>
+            <Setter Property="Padding" Value="{ThemeResource FlyoutContentThemePadding}"/>
+            <Setter Property="MinWidth" Value="{ThemeResource FlyoutThemeMinWidth}"/>
+            <Setter Property="MaxWidth" Value="{ThemeResource FlyoutThemeMaxWidth}"/>
+            <Setter Property="MinHeight" Value="{ThemeResource FlyoutThemeMinHeight}"/>
+            <Setter Property="MaxHeight" Value="{ThemeResource FlyoutThemeMaxHeight}"/>
+            <Setter Property="ScrollViewer.HorizontalScrollMode" Value="Auto" />
+            <Setter Property="ScrollViewer.HorizontalScrollBarVisibility" Value="Auto" />
+            <Setter Property="ScrollViewer.VerticalScrollMode" Value="Auto" />
+            <Setter Property="ScrollViewer.VerticalScrollBarVisibility" Value="Hidden" />
+            <Setter Property="ScrollViewer.ZoomMode" Value="Disabled" />
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="FlyoutPresenter">
+                        <Border Background="{TemplateBinding Background}"
+                    BorderBrush="{TemplateBinding BorderBrush}"
+                    BorderThickness="{TemplateBinding BorderThickness}">
+                            <ScrollViewer x:Name="ScrollViewer"
+                    ZoomMode="{TemplateBinding ScrollViewer.ZoomMode}"
+                    HorizontalScrollMode="{TemplateBinding ScrollViewer.HorizontalScrollMode}"
+                    HorizontalScrollBarVisibility="{TemplateBinding ScrollViewer.HorizontalScrollBarVisibility}"
+                    VerticalScrollMode="{TemplateBinding ScrollViewer.VerticalScrollMode}"
+                    VerticalScrollBarVisibility="{TemplateBinding ScrollViewer.VerticalScrollBarVisibility}"
+                    AutomationProperties.AccessibilityView="Raw">
+                                <ContentPresenter Content="{TemplateBinding Content}"
+                                      ContentTemplate="{TemplateBinding ContentTemplate}"
+                                      ContentTransitions="{TemplateBinding ContentTransitions}"
+                                      Margin="{TemplateBinding Padding}"
+                                      HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
+                                      VerticalAlignment="{TemplateBinding VerticalContentAlignment}"/>
+                            </ScrollViewer>
+                        </Border>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
     </Application.Resources>
-</Application>
+</paging:MtApplication>
