--- a/vozForums Universal/Views/Home/BookmarkView.xaml
+++ b/vozForums Universal/Views/Home/BookmarkView.xaml
@@ -31,13 +31,13 @@
             </TransitionCollection>
             <ListView.ItemTemplate>
                 <DataTemplate>
-                    <Grid VerticalAlignment="Stretch" Tag="{Binding idThread}" BorderThickness="0,0,0,1" Background="{Binding BackgroundHomeColor}">
+                    <Grid VerticalAlignment="Stretch" Tag="{Binding ID}" BorderThickness="0,0,0,1" Background="{Binding BackgroundHomeColor}">
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="*" />
                             <ColumnDefinition Width="50" />
                         </Grid.ColumnDefinitions>
-                        <TextBlock Text="{Binding Name}" TextWrapping="Wrap" Grid.Column="0" Tag="{Binding idThread}" Tapped="StackPanel_Tapped" />
-                        <Button Background="Transparent" Tag="{Binding contentRemove}" HorizontalAlignment="Center" VerticalAlignment="Center" Name="btnDeleteBookmark" Click="btnDeleteBookmark_Click" FontFamily="Segoe MDL2 Assets" Content="&#xE107;"  Grid.Column="1"/>
+                        <TextBlock Text="{Binding Name}" TextWrapping="Wrap" Grid.Column="0" Tag="{Binding Content}" Tapped="TextBlock_Tapped" />
+                        <Button Background="Transparent" Tag="{Binding Content}" HorizontalAlignment="Center" VerticalAlignment="Center" Name="btnDeleteBookmark" Click="btnDeleteBookmark_Click" FontFamily="Segoe MDL2 Assets" Content="&#xE107;"  Grid.Column="1"/>
                     </Grid>
                 </DataTemplate>
             </ListView.ItemTemplate>
