--- a/vozForums Universal/Views/Home/ListThreadView.xaml
+++ b/vozForums Universal/Views/Home/ListThreadView.xaml
@@ -3,6 +3,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:vozForums_Universal.Views"
+    xmlns:control="using:vozForums_Universal.CommonControl"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d" SizeChanged="Page_SizeChanged"
@@ -264,5 +265,55 @@
                 </AppBarButton.Flyout>
             </AppBarButton>
         </CommandBar>
+        <Popup x:Name="myPopupCreateThread" Opacity="1" HorizontalAlignment="Left" VerticalAlignment="Center">
+            <Popup.ChildTransitions>
+                <TransitionCollection>
+                    <PaneThemeTransition Edge="Left"/>
+                </TransitionCollection>
+            </Popup.ChildTransitions>
+            <Grid x:Name="myGridCreateThread" Opacity="1" Background="{StaticResource ApplicationPageBackgroundThemeBrush}">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="50" />
+                    <RowDefinition Height="*" />
+                    <RowDefinition Height="50" />
+                </Grid.RowDefinitions>
+                <Grid Grid.Row="0">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="70" />
+                        <ColumnDefinition Width="*" />
+                        <ColumnDefinition Width="70" />
+                    </Grid.ColumnDefinitions>
+                    <Button x:Name="btnPopupCreateThread" Content="Create" HorizontalAlignment="Center" Grid.Column="0" VerticalContentAlignment="Center" Width="70" Height="50" Click="BtnPopupCreateThread_Click"/>
+                    <TextBlock Text="New thread" HorizontalAlignment="Center" Grid.Column="1" TextAlignment="Center" VerticalAlignment="Center"/>
+                    <Button x:Name="btnClosePopupCreateThread" Content="Close" HorizontalAlignment="Center" Grid.Column="2" VerticalContentAlignment="Center" Click="BtnClosePopupCreateThread_Click" Width="70" Height="50"/>
+                </Grid>
+                <Grid Grid.Row="1">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="40" />
+                        <RowDefinition Height="*" />
+                    </Grid.RowDefinitions>
+                    <Grid Grid.Row="0">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="60" />
+                            <ColumnDefinition Width="*" />
+                        </Grid.ColumnDefinitions>
+                        <TextBlock Grid.Column="0" Text="Title: " VerticalAlignment="Center" RelativePanel.AlignLeftWithPanel="True"/>
+                        <TextBox Grid.Column="1" x:Name="tbTitleNewThread" VerticalAlignment="Center" Margin="5,0,0,0"/>
+                    </Grid>
+                    <TextBox x:Name="tbMessage" Grid.Row="1" HorizontalContentAlignment="Left" VerticalContentAlignment="Center" PlaceholderText="Write Comment here... !" AcceptsReturn="True"  TextWrapping="Wrap" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" ScrollViewer.VerticalScrollBarVisibility="Auto" ScrollViewer.VerticalScrollMode="Auto" Opacity="1" TextChanged="tbComment_TextChanged"/>
+                </Grid>
+                <ScrollViewer HorizontalScrollMode="Auto" HorizontalScrollBarVisibility="Auto" Grid.Row="2">
+                    <StackPanel Orientation="Horizontal" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+                        <Button Name="btnEmoticon" Click="btnEmoticon_Click" Background="Transparent" Grid.Column="0" Width="40" Height="40" HorizontalAlignment="Center" VerticalContentAlignment="Center" VerticalAlignment="Center" FontFamily="Segoe MDL2 Assets" Content="&#xE170;">
+                            <Button.Flyout>
+                                <Flyout x:Name="fly_PanelEmoticon">
+                                    <control:Emoticon x:Name="panelEmoticon" TypeInput="3"/>
+                                </Flyout>
+                            </Button.Flyout>
+                        </Button>
+                    </StackPanel>
+                </ScrollViewer>
+            </Grid>
+        </Popup>
     </Grid>
 </paging:MtPage>
