--- a/vozForums Universal/Views/Home/VersionView.xaml
+++ b/vozForums Universal/Views/Home/VersionView.xaml
@@ -10,6 +10,12 @@
 
     <Frame Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
         <ListBox>
+            <ListBoxItem Content="1.3.85" FontSize="20" />
+            <ListBoxItem Content=" - Update UI ListThread" Margin="20,0,0,0" />
+
+            <ListBoxItem Content="1.3.83" FontSize="20" />
+            <ListBoxItem Content=" - Fix bug" Margin="20,0,0,0" />
+            
             <ListBoxItem Content="1.3.82" FontSize="20" />
             <ListBoxItem Content=" - Fix bug" Margin="20,0,0,0" />
             <ListBoxItem Content=" - Add UI create new thread" Margin="20,0,0,0" />
