--- a/vozForums Universal/Views/Home/VersionView.xaml
+++ b/vozForums Universal/Views/Home/VersionView.xaml
@@ -10,6 +10,10 @@
 
     <Frame Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
         <ListBox>
+            <ListBoxItem Content="1.3.90" FontSize="20" />
+            <ListBoxItem Content=" - Update UI" Margin="20,0,0,0" />
+            <ListBoxItem Content=" - Add download all image of thread" Margin="20,0,0,0" />
+            
             <ListBoxItem Content="1.3.85" FontSize="20" />
             <ListBoxItem Content=" - Update UI ListThread" Margin="20,0,0,0" />
 
